--- a/info.html
+++ b/info.html
@@ -22,7 +22,7 @@
 		</div>
 	</div>
     <script type="text/javascript">
-		var requestURL = '//pro-api.chaokx.cn/v2/mines/power';
+		var requestURL = 'https://tinyurl.com/tkxqpowerinfo';
 		
 		$(document).ready(function(){
 			getPowerInfo();
